# Cpp_SDL3_GameDemo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
emscripten/: shell.html
game/: CMakeLists.txt  animation.cpp  animation.hpp  gameobject.cpp  gameobject.hpp  main.cpp  timer.cpp  timer.hpp  tmx.cpp  tmx.hpp
